# spatial3

./: .gitignore  Makefile.am  README  configure.ac
m4/: ax_lib_mysql.m4  metno_pkg.m4  metno_qt4.m4
src/: Makefile.am  coordinate.cpp  coordinate.hpp  envelope.cpp  envelope.hpp  geometry.cpp  geometry.hpp  geometryimpl.hpp  geometryll.cpp  geometryll.hpp  region.hpp
src/backend/: CircularEngine.cpp  Geodesic.cpp  GeodesicLine.cpp  GravityModel.cpp  Makefile.am  NormalGravity.cpp  PolarStereographic.cpp  SphericalEngine.cpp  Utility.cpp
src/backend/GeographicLib/: CassiniSoldner.hpp  CircularEngine.hpp  Config-ac.h  Constants.hpp  EllipticFunction.hpp  GeoCoords.hpp  Geocentric.hpp  Geodesic.hpp  GeodesicLine.hpp  Geoid.hpp  Gnomonic.hpp  GravityCircle.hpp  GravityModel.hpp  LambertConformalConic.hpp  MagneticCircle.hpp  MagneticModel.hpp  Math.hpp  NormalGravity.hpp  PolarStereographic.hpp  SphericalEngine.hpp  SphericalHarmonic.hpp  SphericalHarmonic1.hpp  SphericalHarmonic2.hpp  TransverseMercator.hpp  TransverseMercatorExact.hpp  UTMUPS.hpp  Utility.hpp
src/backend/headers/: Makefile.am
src/private/: envelopeimpl.hpp  geometry.hpp  geometryimpl.hpp  linearringimpl.hpp  linestringimpl.hpp  pointimpl.hpp  polygonimpl.hpp  utils.hpp
tests/: Makefile.am  simpletest.cpp
